
 * Allow jumping to previous/next difference in data compare window (#131).

 * Collapse long ranges of identical data in data compare window (#85).

 * Added "Jump to offset in main window" to data compare window context menu.

 * Added shortcuts for comparing data (#103).

 * Add support for other encodings to strings tool (#106).

Version 0.3.92 (2021-08-24)

 * Reduce persistent memory usage (#52).

 * Fully undo virtual mapping changes in one step (#126).

 * Fix build dependency errors (#129).

 * Add "Find previous" button to search dialogs (#111).

 * Fix hard-to-see colours in "Decode values" panel on some systems (#127).

 * Fix build errors on FreeBSD (#133).

 * Prevent document from jumping around when the window is resized or
   disassembly is in progress (#132).

 * Fix build errors when using wxWidgets 3.1.5 and newer.

 * Refactor selection handling to make sense in virtual section view (#125).

 * Add font face setting to "View" menu (#128).

 * Correctly track whether files have been modified since saving (#122).

Version 0.3.91 (2021-05-03)

 * Fix loading of plugins bundled as part of an AppImage.

Version 0.3.90 (2021-05-02)

 * Show disassembly of machine code in the main document view (#94).

 * Add font size settings to "View" menu (#97).

 * Add float/double types to "Set data type" menu (#104).

 * Fix selection by holding shift and clicking (#109).

 * Initial support for Lua plugins.

 * Process sections from PE EXE/DLL headers (#86).

 * [Mark Jansen] Save size of main window and tool panels (#88).

 * Don't resize tool panels unnecessarily.

 * Fix invalid cursor state when moving between regions.

 * Fix crash when deleting data (#113, #123).

 * Fix opening files with 8-bit filenames, and other encoding issues (#117).

 * Virtual segment mapping and display (#7).

 * Display inline comments by default (didn't always work).

Version 0.3.1 (2020-11-13)

 * Correctly display signed 16-bit values in "Decode values" panel.
