@@ -100,6 +100,7 @@ namespace REHex {
 			void OnSelectRange(wxCommandEvent &event);
 			void OnFillRange(wxCommandEvent &event);
 			void OnOverwriteMode(wxCommandEvent &event);
+			void OnWriteProtect(wxCommandEvent &event);
 			
 			void OnSetBytesPerLine(wxCommandEvent &event);
 			void OnSetBytesPerGroup(wxCommandEvent &event);
